--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <P><i class="fa-solid fa-paper-plane"></i> pratikpol0602@gmail.com</P>
+                <P><i class="fa-solid fa-paper-plane"></i> pratikpol@mail.com</P>
                 <P><i class="fa-solid fa-square-phone"></i> +91-9987555659</P>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/pratikpol06/"><i class="fa-brands fa-facebook"></i></a>
