--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <a href="https://github.com/RayG-XD" target="_blank" class="btn">See more</a>
     </div>
 </div>
 
