--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
                 <P><i class="fa-solid fa-paper-plane"></i> pratikpol@mail.com</P>
                 <P><i class="fa-solid fa-square-phone"></i> +91-9987555659</P>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/pratikpol06/"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com/RayG_XD"><i class="fa-brands fa-square-twitter"></i></a>
-                    <a href="https://www.instagram.com/_pratik_pol/"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/pratikpol/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/RayG-XD"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.facebook.com/pratikpol06/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://twitter.com/RayG_XD" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="https://www.instagram.com/_pratik_pol/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/pratikpol/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/RayG-XD" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="files/Pratik Pol Resume.pdf" download class="btn btn2">Download CV</a>
+                <a href="files/Pratik Pol Resume.pdf" target="_blank" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
