--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                 <P><i class="fa-solid fa-paper-plane"></i> pratikpol@mail.com</P>
                 <P><i class="fa-solid fa-square-phone"></i> +91-9987555659</P>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/pratikpol06/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com/RayG_XD" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-                    <a href="https://www.instagram.com/_pratik_pol/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/pratikp154/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://twitter.com/pratikpol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="https://www.instagram.com/pratik__pol/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/pratikpol/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/RayG-XD" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
