photo name changed and href added to mail and phone number

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/Profile Pic -orange bg -295 KB.jpg" alt="">
+                <img src="images/Pratik-Pol-Profile-Pic.jpg" alt="">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -144,8 +144,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <P><i class="fa-solid fa-paper-plane"></i> pratikpol@mail.com</P>
-                <P><i class="fa-solid fa-square-phone"></i> +91-9987555659</P>
+                <P><i class="fa-solid fa-paper-plane"></i> <a href="mailto:pratikpol0602@gmail.com">pratikpol0602@gmail.com</a></P>
+                <P><i class="fa-solid fa-square-phone"></i> <a href="tel:+91 9987555659">+91 9987555659</a></P>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/pratikp154/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://twitter.com/pratikpol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
